kubernetes/frigate/helm/frigate/ingress.yaml
---
# Source: frigate/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/version: "0.14.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    ak-type: simple
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: frigate.png
    gethomepage.dev/name: Frigate
spec:
  tls:
    - hosts:
        - "frigate.k.oneill.net"
      secretName: frigate-tls
  rules:
    - host: "frigate.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: "ImplementationSpecific"
            backend:
              service:
                name: frigate
                port:
                  number: 5000
